fixed some redundancy in my code stuff that would break the code, improved readability and fixed bugs

--- a/public/style.css
+++ b/public/style.css
@@ -754,12 +754,13 @@ video {
   content: "";
   position: absolute;
   inset: 0px;
-  height: 100%;
-  width: 100%;
-  border-radius: 0.25rem;
-  background-color: rgb(59 130 246 / 0.3);
+  margin: auto;
+  height: 33.333333%;
+  width: 33.333333%;
+  border-radius: 9999px;
+  background-color: rgb(6 182 212 / 0.7);
   opacity: 0;
-  --tw-blur: blur(40px);
+  --tw-blur: blur(16px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -864,13 +865,14 @@ video {
   content: "";
   position: absolute;
   inset: 0px;
-  height: 100%;
+  height: 90%;
   width: 100%;
-  border-radius: 0.25rem;
-  background-color: rgb(59 130 246 / 0.3);
+  border-radius: 0.75rem;
+  background-color: rgb(255 255 255 / 0.5);
   opacity: 1;
-  --tw-blur: blur(40px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
