--- a/src/input.css
+++ b/src/input.css
@@ -17,7 +17,7 @@
 
   .player::before {
     content: "";
-    @apply absolute inset-0 w-full h-full rounded bg-blue-500/30 opacity-0 blur-2xl transition-all;
+    @apply absolute inset-0 w-1/3 h-1/3 m-auto rounded-full bg-cyan-500/70 opacity-0 blur-lg transition-all;
     z-index: -1;
   }
 
@@ -47,7 +47,7 @@
 
   .selectedCard::before {
     content: "";
-    @apply absolute inset-0 w-full h-full rounded opacity-100 bg-blue-500/30 blur-2xl transition-all;
+    @apply absolute inset-0 w-full h-[90%] rounded-xl opacity-100 bg-white/50 backdrop-blur-sm  transition-all;
     z-index: -1;
   }
 }
